Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20834

QLineEdit inputmask in designer incorrect

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.0.0 Beta 1
    • 4.7.1
    • None
    • OpenSuSE 11.4 64-bit AMD all patches applied.
    • c039ad21b5b4435c657a18ffe1d940067e01bf7d

      Put a QLineEdit on a form, enter input mask of 09 and exit the field. You will see the field gets 09; put in it. When this is compiled for mono the inputmask is really "09; " with a field width of 2, so no entry is allowed. The designer is definitely putting the ; at the end. I believe this bug is both the designer and the ui compiler for mono.

      One note. Overriding the InputMask programatically during the object constructor does not fix field entry.

      This is most definitely a bug! To the one who brushed it off to look busy rather than researching, READ THE DOC YOURSELF!

      http://doc.qt.nokia.com/4.7-snapshot/qlineedit.html#inputMask-prop

      <b>optionally</b> followed by a semicolon and the character used for blanks.

      NOTICE __optionally__ at the beginning???? The designer is forcing these values in with no way for the user to remove them. This is QT Designer bug as reported.

        1. friedmann1.png
          12 kB
          Roland Hughes
        2. QTBUG-20834_110810.patch
          0.8 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            seasoned_geek Roland Hughes
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes